--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -33,14 +33,36 @@
         }
 
         .result {
-            margin: 100px auto;
+            background-color: rgb(46, 44, 44);
+            padding: 10px;
+            border-radius: 8px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            margin: auto;
+            width: 30%;
+            height: 500px;
         }
 
         .container {
             display: flex;
             justify-content: space-between;
+            flex-direction: column;
             margin: auto;
             margin-top: 4%;
+        }
+
+        #goBack {
+            margin: 60px auto;
+            display: inline-block;
+            padding: 10px;
+            background-color: #cb1a1a;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 4px;
+            width: 200px;
+            font-weight: bold;
+            border-style: none;
         }
 
         .gameBoard {
@@ -95,6 +117,12 @@
             margin: auto;
         }
 
+        .loadingMatch {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+        }
+
         @media only screen and (max-width: 768px) {
             .container {
                 display: flex;
@@ -103,6 +131,18 @@
             }
 
             .gameBoard {
+                background-color: rgb(46, 44, 44);
+                padding: 10px;
+                border-radius: 8px;
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+                margin: auto;
+                width: 90%;
+                height: 500px;
+            }
+
+            .result {
                 background-color: rgb(46, 44, 44);
                 padding: 10px;
                 border-radius: 8px;
@@ -160,7 +200,7 @@
             <h1>Tic Tac Toe</h1>
             <button onclick="playWithBot()">Play with bot</button>
             <button onclick="findMatch()">Find match</button>
-            <button onclick="playWithFriends()">Play with friends</button>
+            <button onclick="playWithFriends()">Play with friend</button>
         </div>
     </div>
     <script>
@@ -188,7 +228,8 @@
                     <button id="box1-7" class="boardBox"></button>
                     <button id="box1-8" class="boardBox"></button>
                 </div>
-            </div>`
+            </div>
+            <button id="goBack" onclick="goBack()">Surrender?</button>`
             const script = document.createElement("script");
             script.src = "../frontend/tictactoebot.js";
             script.id = "tictactoebot-script";
@@ -196,7 +237,7 @@
         }
     </script>
     <script src="/socket.io/socket.io.js"></script>
-    <!-- <script>
+    <script>
         function playWithFriends() {
             const scriptToRemove1 = document.getElementById("tictactoebot-script1");
             if (scriptToRemove1) {
@@ -216,7 +257,26 @@
             script.id = "tictactoebot-script1";
             document.body.appendChild(script);
         }
-    </script> -->
+    </script>
+    <script>
+        function goBack() {
+            document.getElementById("container").innerHTML = `<div class="findMatch">
+                    <h1>Tic Tac Toe</h1>
+                    <button onclick="playWithBot()">Play with bot</button>
+                    <button onclick="findMatch()">Find match</button>
+                    <button onclick="playWithFriends()">Play with friends</button>
+                </div>`
+        }
+        function cancel() {
+            document.getElementById("container").innerHTML = `<div class="findMatch">
+                    <h1>Tic Tac Toe</h1>
+                    <button onclick="playWithBot()">Play with bot</button>
+                    <button onclick="findMatch()">Find match</button>
+                    <button onclick="playWithFriends()">Play with friends</button>
+                </div>`
+            socket.emit('removeAvailable', { senderID: "<%= username %>" });
+        }
+    </script>
     <script>
         const socket = io();
         socket.emit("connection");
@@ -229,7 +289,9 @@
             <div class="loadingMatch">
                 <h1>Finding players...</h1>
                 <h2>Estimate time 30s..</h2>
+                <button id="goBack" onclick="cancel()">Cancel</button>
             </div>`
+
 
             socket.emit('findMatch', { senderID: "<%= username %>" });
             socket.on('matched', (matchedUserData) => {
@@ -268,92 +330,119 @@
             // script.src = "../frontend/tictactoeonline.js";
             // script.id = "tictactoebot-script1";
             // document.body.appendChild(script);
+
+
             a = document.getElementById("box-0");
-b = document.getElementById("box-1");
-c = document.getElementById("box-2");
-d = document.getElementById("box-3");
-e = document.getElementById("box-4");
-f = document.getElementById("box-5");
-g = document.getElementById("box-6");
-h = document.getElementById("box-7");
-i = document.getElementById("box-8");
+            b = document.getElementById("box-1");
+            c = document.getElementById("box-2");
+            d = document.getElementById("box-3");
+            e = document.getElementById("box-4");
+            f = document.getElementById("box-5");
+            g = document.getElementById("box-6");
+            h = document.getElementById("box-7");
+            i = document.getElementById("box-8");
 
-let box = [a, b, c, d, e, f, g, h, i];
-p1Win = false;
-p2Win = false;
-cliked = false;
-toss = 'X';
-attempt = 0;
-scoreP1 = 0;
-scoreP2 = 0;
-let players;
+            let box = [a, b, c, d, e, f, g, h, i];
+            p1Win = false;
+            p2Win = false;
+            cliked = false;
+            toss = 'X';
+            attempt = 0;
+            scoreP1 = 0;
+            scoreP2 = 0;
+            let players;
 
-// Attach event listeners to buttons here
-for (let x = 0; x < box.length; x++) {
-    box[x].addEventListener('click', function () {
-        clik(x);
-    });
-}
+            // Attach event listeners to buttons here
+            for (let x = 0; x < box.length; x++) {
+                box[x].addEventListener('click', function () {
+                    clik(x);
+                });
+            }
 
-function clik(x) {
-    if (p1Win == false && p2Win == false && cliked == false) {
-        console.log("inside clik()");
-        if (box[x].innerText == "") {
-            box[x].innerText = toss;
-            cliked = true;
-            winCheck();
-            const message = x;
-            console.log("p2:v"+player2)
-            socket.emit('send_message', { senderID: senderName, recipientID: player2, content1: message, content2: toss });
-        }
-    }
-}
+            function clik(x) {
+                if (p1Win == false && p2Win == false && cliked == false) {
+                    if (box[x].innerText == "") {
+                        box[x].innerText = toss;
+                        cliked = true;
+                        winCheck();
+                        const message = x;
+                        socket.emit('send_message', { senderID: senderName, recipientID: player2, content1: message, content2: toss });
+                    }
+                }
+            }
 
-// Receive messages from the server
-socket.on('new_message', (data) => {
-    const { senderID, content1, content2 } = data;
-    console.log(`New message from ${senderID}: ${content1} :${content2}`);
-    if (box[content1].innerText == "") {
-        box[content1].innerText = content2;
-        cliked = false;
-        winCheck();
-    }
-    if (content2 == 'X') {
-        toss = 'O'
-    } else {
-        toss = 'X'
-    }
-});
+            // Receive messages from the server
+            socket.on('new_message', (data) => {
+                const { senderID, content1, content2 } = data;
+                if (box[content1].innerText == "") {
+                    box[content1].innerText = content2;
+                    cliked = false;
+                    winCheck();
+                }
+                if (content2 == 'X') {
+                    toss = 'O'
+                } else {
+                    toss = 'X'
+                }
+            });
 
-function checkWin(x, y, z) {
-    if (box[x].innerText == "X" && box[y].innerText == "X" && box[z].innerText == "X") {
-        //checks left to right diag line for player
-        console.log("You WIN");
-        pWin = true;
-        result.innerText = "X Wins";
-        // score_1.innerText = ++scoreP1;
-        attempt++;
-        attempts.innerText = attempt;
+            function checkWin(x, y, z) {
+                if (box[x].innerText == "X" && box[y].innerText == "X" && box[z].innerText == "X") {
+                    //checks left to right diag line for player
+                    pWin = true;
+                    if (toss == 'X') {
+                        document.getElementById("container").innerHTML = `<div class="result"><h2>You WIN</h2>
+                        <button id="retry" onclick="resetValues()">Try Again?</button>
+                        <button id="goBack" onclick="cancel()">Go Back</button></div>`
+                    } else {
+                        document.getElementById("container").innerHTML = `<div class="result"><h2>You Lose</h2>
+                        <button id="retry" onclick="resetValues()">Try Again?</button>
+                        <button id="goBack" onclick="cancel()">Go Back</button></div></div>`
+                    }
 
-    } else if (box[x].innerText == "O" && box[y].innerText == "O" && box[z].innerText == "O") {
-        //checks left to right diag line for bot
-        bWin = true;
-        result.innerText = "O Wins";
-        attempt++;
-        attempts.innerText = attempt;
-    }
-}
 
-function winCheck() {
-    checkWin(0, 4, 8);
-    checkWin(1, 4, 7);
-    checkWin(0, 1, 2);
-    checkWin(2, 4, 6);
-    checkWin(2, 5, 8);
-    checkWin(3, 4, 5);
-    checkWin(0, 3, 6);
-    checkWin(6, 7, 8);
-}
+                } else if (box[x].innerText == "O" && box[y].innerText == "O" && box[z].innerText == "O") {
+                    //checks left to right diag line for bot
+                    bWin = true;
+                    if (toss == 'O') {
+                        document.getElementById("container").innerHTML = `<div class="result"><h2>You WIN</h2>
+                        <button id="retry" onclick="resetValues()">Try Again?</button>
+                        <button id="goBack" onclick="cancel()">Go Back</button></div>`
+                    } else {
+                        document.getElementById("container").innerHTML = `<div class="result"><h2>You Lose</h2>
+                        <button id="retry" onclick="resetValues()">Try Again?</button>
+                        <button id="goBack" onclick="cancel()">Go Back</button></div></div>`
+                    }
+                }
+            }
+
+            function winCheck() {
+                if (
+                    box[0].innerText != "" &&
+                    box[1].innerText != "" &&
+                    box[2].innerText != "" &&
+                    box[3].innerText != "" &&
+                    box[4].innerText != "" &&
+                    box[5].innerText != "" &&
+                    box[6].innerText != "" &&
+                    box[7].innerText != "" &&
+                    box[8].innerText != ""
+                ) {
+                    pWin = true;
+                    bWin = true;
+                    document.getElementById("container").innerHTML = `<div class="result">
+        <button id="retry" onclick="resetValues()">Try Again?</button>
+        <button id="goBack" onclick="cancel()">Go Back</button></div></div>`
+                }
+                checkWin(0, 4, 8);
+                checkWin(1, 4, 7);
+                checkWin(0, 1, 2);
+                checkWin(2, 4, 6);
+                checkWin(2, 5, 8);
+                checkWin(3, 4, 5);
+                checkWin(0, 3, 6);
+                checkWin(6, 7, 8);
+            }
         }
     </script>
 </body>
