--- a/games/Rock-Paper-Scissors.ejs
+++ b/games/Rock-Paper-Scissors.ejs
@@ -12,7 +12,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link href="/frontend/global.css" rel="stylesheet">
 <link href="/frontend/animation.css" rel="stylesheet">
 <style>
@@ -24,53 +25,53 @@
         margin: 20% 12% 10%;
     }
 
-    #main {
-        padding: 2%;
+    h1 {
+        text-align: center;
+        color: white;
         font-family: 'Roboto', sans-serif;
-        font-size: 25px;
+        font-size: 50px;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        margin: 6% auto;
     }
 
     #score {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        padding: 1%;
-        margin-top: 1px;
-        font-family: 'Roboto', sans-serif;
+        width: 45%;
+        padding: 2%;
+        text-align: center;
         color: var(--text-color-2);
-    }
-
-    #sc-box {
-        border: solid black;
-        background-color: aliceblue;
-        color: var(--text-color-1);
-        font-family: 'Roboto', sans-serif;
-        margin: 10px;
-        padding: 20px;
-        font-size: 30px;
-    }
-
-    #sc-box1 {
-        border: solid black;
-        background-color: aliceblue;
-        color: var(--text-color-1);
-        font-family: 'Roboto', sans-serif;
-        margin: 10px;
-        padding: 20px;
-        font-size: 30px;
-    }
-
-    #sc-box2 {
-        border: solid black;
-        background-color: aliceblue;
-        color: var(--text-color-1);
-        font-family: 'Roboto', sans-serif;
-        margin: 10px;
-        padding: 20px;
-        font-size: 30px;
+        background-color: rgb(47, 47, 47);
+        border-radius: 8px;
     }
 
     #stage {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 45%;
         padding: 2%;
+        background-color: rgb(47, 47, 47);
+        border-radius: 8px;
+    }
+
+    .sc {
+        border: solid black;
+        background-color: aliceblue;
+        color: var(--text-color-1);
+        font-family: 'Roboto', sans-serif;
+        margin: 10px auto;
+        border-style: none;
+        height: 50px;
+        width: 100px;
+        padding: 20px;
+        border-radius: 8px;
     }
 
     #computer {
@@ -156,40 +157,41 @@
         <div class="novastar">
             <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
         </div>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a>Games</a></li>
                 <li><a><span class="material-symbols-outlined">account_circle</span></a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
-    <div id="main">
-        <h1><b>
-                <center>Rock-Paper-Scissors</center>
-            </b></h1>
+    <h1>Rock-Paper-Scissors</h1>
     </div>
-    <div id="score">
-        <p><b>Score :</b></p>
-        <p id="sc-box"></p>
-        <p><b>Attempt :</b></p>
-        <p id="sc-box1"></p>
-        <p><b>Result :</b></p>
-        <p id="sc-box2"></p>
     </div>
-    <div id="stage">
-        <div id="computer">
-            <p><b>Computer : </b></p>
-            <div id="rock1"><span class="material-icons">circle</span></div>
-            <div id="paper1"><span class="material-icons">note</span></div>
-            <div id="scissor1"><span class="material-icons">content_cut</span></div>
+    <div class="container">
+        <div id="score">
+            <p><b>Score :</b></p>
+            <p id="sc-box" class="sc"></p>
+            <p><b>Attempt :</b></p>
+            <p id="sc-box1" class="sc"></p>
+            <p><b>Result :</b></p>
+            <p id="sc-box2" class="sc"></p>
         </div>
-        <div id="person">
-            <p><b><%= username %></b></p>
-            <div id="rock" onclick="rps('1')"><span class="material-icons">circle</span></div>
-            <div id="paper" onclick="rps('2')"><span class="material-icons">note</span></div>
-            <div id="scissor" onclick="rps('3')"><span class="material-icons">content_cut</span></div>
+        <div id="stage">
+            <div id="computer">
+                <p><b>Computer : </b></p>
+                <div id="rock1"><span class="material-icons">circle</span></div>
+                <div id="paper1"><span class="material-icons">note</span></div>
+                <div id="scissor1"><span class="material-icons">content_cut</span></div>
+            </div>
+            <div id="person">
+                <p><b>
+                        <%= username %>
+                    </b></p>
+                <div id="rock" onclick="rps('1')"><span class="material-icons">circle</span></div>
+                <div id="paper" onclick="rps('2')"><span class="material-icons">note</span></div>
+                <div id="scissor" onclick="rps('3')"><span class="material-icons">content_cut</span></div>
+            </div>
         </div>
-    </div>
 </body>
 <script>
     let s1 = document.getElementById("sc-box");
