--- a/games/cosmicShoot.ejs
+++ b/games/cosmicShoot.ejs
@@ -7,28 +7,36 @@
     <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
     <!-- <link href="/frontend/css/index.css" rel="stylesheet"> -->
     <link href="/frontend/animation.css" rel="stylesheet">
-    <title>Shoot Down</title>
+    <title>Cosmic Shoot</title>
     <style>
         body {
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(58, 58, 58);
         }
 
         svg {
-            height: 700px;
+            height: 600px;
             width: 1500px;
-            border: 1px solid black;
-            /* background-color: black; */
+        }
+
+        .spaceship {
+            width: 60px;
+            height: 50px;
+            object-fit: contain;
         }
     </style>
 </head>
 
 <body>
-    <svg id="svg" width="400" height="400">
+    <div class="spaceship">
+        <img src="../assets/spaceship1.png">
+    </div>
+
+    <!-- <svg id="svg" width="400" height="400">
         <rect id="rect" x="100" y="50" width="30" height="30" fill="red " />
         <line id="line" x1="0" y1="0" x2="0" y2="0" stroke="orange" stroke-width="2" />
-    </svg>
+    </svg> -->
 </body>
-<script>
+<!-- <script>
     const svg = document.getElementById("svg");
     const rect = document.getElementById("rect");
     const line = document.getElementById("line");
@@ -72,10 +80,10 @@
     let startX = x;
     let startY = y;
     function mouseDown() {
-        line.setAttribute("x1",startX);
-        line.setAttribute("y1",startX);
-        line.setAttribute("x2",startX+10);
-        line.setAttribute("y2",startY);
+        line.setAttribute("x1", startX);
+        line.setAttribute("y1", startX);
+        line.setAttribute("x2", startX + 10);
+        line.setAttribute("y2", startY);
     }
 
     function mouseUp() {
@@ -84,6 +92,6 @@
         startY = y;
     }
 
-</script>
+</script> -->
 
 </html>
