--- a/views/user.ejs
+++ b/views/user.ejs
@@ -151,9 +151,9 @@
             <a onclick="TicTacToe_online()" class="cta-button">Play Now</a>
         </div>
         <div class="game-card">
-            <img src="game2.jpg" alt="Game 2">
+            <img src="../assets/cosmicshootwlp.png" alt="Game 2">
             <h3>Cosmic shoot</h3>
-            <a onclick="shootDown()" class="cta-button">Play Now</a>
+            <a onclick="cosmicShoot()" class="cta-button">Play Now</a>
         </div>
         <div class="game-card">
             <img src="../assets/rpswlp.png" alt="Game 2">
@@ -178,7 +178,7 @@
         function TicTacToe_online() {
             window.location.href = "/<%= username %>/TicTacToe-online";
         }
-        function shootDown() {
+        function cosmicShoot() {
             window.location.href = "/<%= username %>/shootDown";
         }
         function chess() {
