--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -89,6 +89,7 @@
             border-radius: 10px;
             border: none;
             margin: 10px 10px 10px 10px;
+            font-size: 35px;
         }
 
         .findMatch {
