--- a/views/user.ejs
+++ b/views/user.ejs
@@ -118,6 +118,14 @@
     }
 
     @media only screen and (max-width: 768px) {
+        .game-card {
+        display: inline-block;
+        width: 70%;
+        padding: 20px;
+        margin: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
         .friends {
             background-color: var(--main-bg-color-2);
             width: 80%;
