--- a/games/cosmicShoot.ejs
+++ b/games/cosmicShoot.ejs
@@ -4,115 +4,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
-    <!-- <link href="/frontend/css/index.css" rel="stylesheet"> -->
-    <link href="/frontend/animation.css" rel="stylesheet">
-    <title>Cosmic Shoot</title>
+    <!-- <link rel="stylesheet" href="/frontend/global.css"> -->
+    <title>Cosmic shoot</title>
     <style>
         body {
-            background-color: rgb(58, 58, 58);
+            margin: 0;
+            overflow: hidden;
+            background-color: #1e1e1e;
         }
 
-        .spaceship {
+        .menu {
+            margin: 100px auto;
+            width: auto;
+            height: 400px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+        }
+
+        h1 {
+            color: white;
+            text-align: center;
+        }
+
+        button {
+            display: inline-block;
+            padding: 10px;
+            background-color: #ff9900;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 4px;
+            width: 200px;
+            font-weight: bold;
+            border-style: none;
+            margin: auto;
+        }
+
+        .game-container {
             position: relative;
             width: 100%;
-            height: 900px;
+            height: 100vh;
+        }
+
+        .spacecraft {
+            position: absolute;
+            width: 60px;
+            height: 50px;
+            /* background-color: #00f; */
             overflow: hidden;
         }
 
-        .spaceship img {
+        .spacecraft img {
             position: absolute;
-            top: 550px;
-            left: 550px;
             width: 60px;
             height: 50px;
             transform-origin: center center;
             transition: transform 0.2s;
         }
 
-        .beam {
-            position: absolute;
-            width: 4px;
-            height: 40px;
-            background-color: rgb(193, 112, 0);
-            transform-origin: center center;
-            transition: transform 0.3s;
-            animation: none;
+        .score-board {
+            display: flex;
+            justify-content: space-between;
+            height: 400px;
+            flex-direction: column;
         }
 
-        @keyframes beam-animation {
-            from {
-                transform: translateY(0);
-            }
+        .asteroid {
+            width: 60px;
+            height: 50px;
+            position: absolute;
+        }
 
-            to {
-                transform: translateY(-1000px);
-            }
+        .asteroid img {
+            width: 100%;
+        }
+
+
+        .bullet {
+            position: absolute;
+            width: 5px;
+            height: 10px;
+            background-color: #fff;
         }
     </style>
 </head>
 
 <body>
-    <div class="spaceship" id="spaceship">
-        <img src="../assets/spaceship1.png" id="spaceship-img">
-    </div>
-
-
+    <div id="game-container">
+        <div class="menu">
+            <h1>Cosmic shoot</h1>
+            <button onclick="start()">Start</button>
+            <button onclick="score()">Score</button>
+            <button onclick="exit()">Exit</button>
+        </div>
+        <div class="asteroid">
+            <!-- <img src="../assets/asteroid1.png" alt="Asteroid Image"> -->
+        </div>
 </body>
+
+
+
+
 <script>
-    const spaceship = document.getElementById('spaceship-img');
-    const space = document.getElementById('spaceship');
-    let rotation = 0;
-    let posX = 0;
-    let posY = 0;
-
-    document.addEventListener('keydown', (event) => {
-        switch (event.key) {
-            case 'a':
-                posX -= 10;
-                rotation = -90;
-                break;
-            case 'd':
-                posX += 10;
-                rotation = 90;
-                break;
-            case 'w':
-                posY -= 10;
-                rotation = 0;
-                break;
-            case 's':
-                posY += 10;
-                rotation = 180;
-                break;
+    function exit() {
+        window.location = "/";
+    }
+    function back() {
+        document.getElementById("game-container").innerHTML = `<div class="menu">
+            <h1>Cosmic shoot</h1>
+            <button onclick="start()">Start</button>
+            <button onclick="score()">Score</button>
+            <button onclick="exit()">Exit</button>
+        </div>
+        <div class="asteroid">
+            <!-- <img src="../assets/asteroid1.png" alt="Asteroid Image"> -->
+        </div>`;
+    }
+    function score() {
+        document.getElementById("game-container").innerHTML = `<h1>score</h1>
+    <button onclick="back()">back</button>`;
+    }
+    function start() {
+        let spacecraft;
+        let spacecraftX;
+        let spacecraftY;
+        let rotation;
+        const asteroids = [];
+        const bullets = [];
+        let scores;
+        const scriptToRemove = document.getElementById("cosmicshoot-script");
+        if (scriptToRemove) {
+            scriptToRemove.remove();
         }
+        document.getElementById("game-container").innerHTML = `<div class="spacecraft">
+            <img src="../assets/spaceship1.png" id="spaceship-img">
+        </div>
+        <div class="asteroid">
+            <!-- <img src="../assets/asteroid1.png" alt="Asteroid Image"> -->
+        </div>
+    </div>
+    <div class="bullets"></div>`;
+        const script = document.createElement("script");
+        script.src = "../frontend/cosmicshoot.js";
+        script.id = "cosmicshoot-script";
+        document.body.appendChild(script);
+    }
+    function createAsteroid() {
+        const asteroid = document.createElement('div');
+        asteroid.className = 'asteroid';
 
-        spaceship.style.transform = `translate(${posX}px, ${posY}px) rotate(${rotation}deg)`;
-        console.log(posX, posY)
-    });
+        const asteroidImage = document.createElement('img');
+        asteroidImage.src = '../assets/asteroid1.png';
+        asteroidImage.alt = 'Asteroid Image';
 
-    space.addEventListener('click', () => {
-        shootBeam();
-    });
+        asteroid.appendChild(asteroidImage);
+        document.body.appendChild(asteroid);
 
-    function shootBeam() {
-        const beam = document.createElement('div');
-        beam.className = 'beam';
-        const spaceshipRect = space.getBoundingClientRect();
-        bposX = spaceshipRect.left + spaceshipRect.width / 2;
-        bposY = spaceshipRect.top + spaceshipRect.height / 2;
-        console.log(bposX, bposY)
-        beam.style.transform = `translate(${bposX}px, ${bposY}px) rotate(${rotation}deg)`;
-        space.appendChild(beam);
+        const randomX = Math.random() * window.innerWidth;
+        const randomY = Math.random() * window.innerHeight;
+        asteroid.style.left = randomX + 'px';
+        asteroid.style.top = randomY + 'px';
+        const speed = Math.random() * 4 + 2;
+        const angle = Math.random() * 360;
+        const radians = angle * (Math.PI / 180);
+        const xVelocity = Math.cos(radians) * speed;
+        const yVelocity = Math.sin(radians) * speed;
 
-        // Start the animation
-        beam.style.animation = 'beam-animation 1s linear';
+        function updateAsteroidPosition() {
+            const currentX = parseFloat(asteroid.style.left);
+            const currentY = parseFloat(asteroid.style.top);
+
+            asteroid.style.left = (currentX + xVelocity) + 'px';
+            asteroid.style.top = (currentY + yVelocity) + 'px';
+        }
+        const asteroidInterval = setInterval(updateAsteroidPosition, 50);
 
         setTimeout(() => {
-            beam.remove();
-        }, 1000);
+            clearInterval(asteroidInterval);
+            asteroid.remove();
+        }, 10000);
+
     }
-
-
+    setInterval(createAsteroid, 2000);
 </script>
 
 </html>
