--- a/views/user.ejs
+++ b/views/user.ejs
@@ -260,6 +260,26 @@
             <h3>Chess</h3>
             <a onclick="chess()" class="cta-button">Play Now</a>
         </div>
+        <div class="game-card">
+            <img src="../assets/truck.png" alt="Game 2">
+            <h3>game#5</h3>
+            <a onclick="truck()" class="cta-button">Play Now</a>
+        </div>
+        <div class="game-card">
+            <img src="../assets/bgimg2.webp" alt="Game 2">
+            <h3>game#6</h3>
+            <a onclick="paint()" class="cta-button">Play Now</a>
+        </div>
+        <div class="game-card">
+            <img src="../assets/satellite_1.png" alt="Game 2">
+            <h3>game#7</h3>
+            <a onclick="paint()" class="cta-button">Play Now</a>
+        </div>
+        <div class="game-card">
+            <img src="../assets/bgimg1.webp" alt="Game 2">
+            <h3>game#8</h3>
+            <a onclick="paint()" class="cta-button">Play Now</a>
+        </div>
     </section>
     <div class="addFriend">
         <label>Add Friend</label>
@@ -288,6 +308,12 @@
         }
         function chess() {
             window.location.href = "/<%= username %>/chess";
+        }
+        function truck() {
+            window.location.href = "/<%= username %>/truck";
+        }
+        function paint() {
+            window.location.href = "/<%= username %>/paint";
         }
 
         function addFriend() {
