--- a/views/user.ejs
+++ b/views/user.ejs
@@ -273,12 +273,12 @@
         <div class="game-card">
             <img src="../assets/satellite_1.png" alt="Game 2">
             <h3>game#7</h3>
-            <a onclick="paint()" class="cta-button">Play Now</a>
+            <a onclick="game7()" class="cta-button">Play Now</a>
         </div>
         <div class="game-card">
             <img src="../assets/bgimg1.webp" alt="Game 2">
             <h3>game#8</h3>
-            <a onclick="paint()" class="cta-button">Play Now</a>
+            <a onclick="game7()" class="cta-button">Play Now</a>
         </div>
     </section>
     <div class="addFriend">
